[tool.poetry]
name = "vll2vln"
version = "0.1.0"
description = ""
authors = ["Felipe Monteiro <fmarkson@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
newtonpy = "^0.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
notebook = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
